# flyght_discord_bot

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  config_data.rs  create_event.rs  main.rs  reactions.rs
src/event_management/: events.rs
