[package]
name = "flyght-ultimate-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.81"
poise = "^0.6.1"
serenity = { version = "^0.12.1", default-features = true }
shuttle-runtime = "^0.43.0"
shuttle-serenity = "^0.43.0"
tokio = "^1.37.0"
tracing = "^0.1.40"
async-trait = "^0.1.79"
chrono = "^0.4.37"
regex = "1.10.4"
